--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,8 @@
               {
                 src: videoLink,
                 type: 'video/mp4',
-                label: '144'
+                label: '270',
+                res: 270
               }
             ])
             player.on('resolutionchange', function(){
